---------------------------------------------------------------------------------------------------
Version: 1.3.15
Date: ????
  Bugfixes:
    - Fix crash caused by milestones for invalid items not being removed if they are in the last position of the set.

---------------------------------------------------------------------------------------------------
Version: 1.3.14
Date: 2023-01-27

  Changes:
    - Tweaks to IR3 preset (Added Heavy picket, graphene, and electrum. Replaced special projects pack end goal count with a technology milestone, since productivity in labs can actually make the required number of packs variable).
    - Tweaks to PyMods presets (Added Dig-o-saurus, Thikat, Caravan, and Oculus)
    - Large changes to the Sea Block presets with input from the Sea Block community.
    - Add preset addon for the "Cat" mod.
    - As usual you will need to refresh your milestone set yourself if you are already in the middle of a playthrough (Settings -> Switch to Empty -> Switch to the preset you want -> Confirm).

  Optimizations:
    - Milestone checks are now spread over every tick of the frequency interval (the "Ticks between each check" mod setting) instead of happening all at once. This should solve spikes of performance hit when playing with a large amount of milestones.

  Compatibility:
    - You can now have your mod provide presets and preset addons by implementing a `milestones_presets` or `milestones_preset_addons` remote interface.
      Please check out the comments in presets.lua and preset_addons.lua for more details.

  Bugfixes:
    - Fix GUI sometimes being too wide for the screen when using Compact mode. (Again!)
    - Fix settings GUI "Add X" buttons states being wrong when changing preset.
    - Fix settings GUI selection state being wrong after moving a selected line.
    - Fix issue where technologies that end with a number (e.g. "Electronics 3") would be considered researched during backfilling even if they were not.

  Locale: