@@ -3,6 +3,7 @@ Version: 1.3.15
 Date: ????
   Bugfixes:
     - Fix crash caused by milestones for invalid items not being removed if they are in the last position of the set.
+    - Fix Bob's Modules preset addon being loaded when using Bob's Enemies instead.
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.14
